2002-05-07  Terry Biggs <tbiggs@users.sourceforge.net>

	* split gs_gbs.* into main/gbs.* and gnome/_gbs.*
	* renamed backend/gbs.* to gbs_.*


2002-05-06  Terry Biggs <tbiggs@users.sourceforge.net>

	* split gs_dictlex.* into main/dictlex.* and gnome/_dictlex.*
	* renamed backend/dictlex.* to dictlex_.*


2002-05-03  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed gs_mainmenu_cb.* added gnome/main_menu.*
	  took menu creation from main/gs_gui.* put menu creation
	  and call backs into gnome/main_menu.*
	* added function headers to gnome/main_menu.* and removed
	  calls to backend
	* renamee main/gs_commentary.* to main/commentary.*
	* renamed backend/commentary.* to backend/commentary_.*
	* added gnome/_commentary.*
	


2002-05-02  Terry Biggs <tbiggs@users.sourceforge.net>

	* split main/gs_editor into gnome/link_dialog, gnome/_editor, 
	* gnome/editor_menu and main/gs_editor more work to be dome.
	* added main/percomm and backend/percomm_


2002-04-26  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed main/gs_unlockkey_dlg.* gnome/cipher_key_dialog.*
	* added backend/bibletext.* and main/gs_bibletext.*
	

2002-04-22  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed backend/viewcomm_dlg.* to backend/viewcomm.* 
	* removed gui stuff from viewcomm.*
	* renamed backend/verselist_sb.* to backend/verselist.* 

2002-04-20  Terry Biggs <tbiggs@users.sourceforge.net>

	* added es.po from Jorge Chacon <jgchacon@itelgua.com>
	* corrected some spelling error in gui

2002-04-19  Terry Biggs <tbiggs@users.sourceforge.net>

	* add files create_shortcutbar_viewer.* to src/gnome
	* remove gui stuff from backend/verslist_sb.*
	* rename backend/viewtext_dlg.* to backend/viewtext.*
	* remove gui stuff form backend/viewtext.*

2002-04-18  Terry Biggs <tbiggs@users.sourceforge.net>

	* add files create_shortcutbar_search.* to src/gnome
	* removed gui stuff from search.cpp


2002-04-15  Terry Biggs <tbiggs@users.sourceforge.net>
