@@ -28,7 +28,9 @@ extern "C" {
 #endif
 
 #include "gs_gnomesword.h"
-
+	
+void backend_display_book_heading(gint modnum);	
+void backend_display_chap_heading(gint modnum);
 const char* backend_nav_commentary( gint modnum,
 				   gint direction );
 void backend_new_display_commentary( GtkWidget * html, char *modname,
